# ai-and-ml-security-minicourse

./: .gitignore  00 - Getting Started with Local AI.ipynb  01 - Jumping Guardrails via Prompt Engineering.ipynb  01b - Prompt Extraction.ipynb  01b - Prompt and Document Extraction.ipynb  01c - Document Poisoning.ipynb  02 - Crescendo.ipynb  03 - Advanced Adversarial Prompt Engineering.ipynb  04 - Input Sanitization with Presidio.ipynb  04 - Llama Guard Exploration.ipynb  05 - LLM as a Judge.ipynb  05 - Llama Guard Exploration.ipynb  06 - LLM as a Judge.ipynb  07 - Comparing Qwen3Guard.ipynb  08 - Comparing OpenGuardrails.ipynb  09 - Prompt Guard with Transformers Library.ipynb  Building Car Decision Tree Model.ipynb  Building Spam Model.ipynb  Example Attack - Lorem Ipsum.ipynb  Extras - Adversarial Examples.ipynb  Extras - Case Study - Adversarial Detection.ipynb  Extras - Exploring Embeddings.ipynb  Extras - Model Extraction Attack.ipynb  README.md  llamafile_client.py  pyproject.toml  requirements.txt
data/: README.md  bayes_spam_pipeline.pkl  car_cleaned.csv  car_tree.pkl  loremipsum.txt
data/documents/: email_list.txt  poisoned_doc.txt  poisoned_less_harmful.txt  sensitive_info.txt  wiki_rag.txt
data/img/: README.md
data/templates/: rag_prompt.txt
solutions/: 0301_shark.py  0302_adversarial_vs_original_predictions.py  0303_carliniwagner_attack.py  0304_test_predictions.py  0305_plot_examples.py  04_poisoning.py  feature_squeezing_detection.py
